--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-body {
+#root body {
   font: 14px "Century Gothic", Futura, sans-serif;
   margin: 20px; }
 
-ol, ul {
+#root ol, #root ul {
   padding-left: 30px; }
 
-.status {
+#root .status {
   margin-bottom: 10px; }
 
-.kbd-navigation .square:focus {
+#root .kbd-navigation .square:focus {
   background: #ddd; }
