--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,24 @@
-body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
-}
+#root {
 
-ol, ul {
-  padding-left: 30px;
-}
+	body {
+	  font: 14px "Century Gothic", Futura, sans-serif;
+	  margin: 20px;
+	}
+
+	ol, ul {
+	  padding-left: 30px;
+	}
 
 
-.status {
-  margin-bottom: 10px;
-}
+	.status {
+	  margin-bottom: 10px;
+	}
 
-.kbd-navigation .square:focus {
-  background: #ddd;
+	.kbd-navigation .square:focus {
+	  background: #ddd;
+	}
+
+
 }
 
 
